--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> second repository of my course
-
+     <link rel="stylesheet" href="style.css">
     </title>
 </head>
 <body> <h1> this is my second git code push</h1>
     <h2>i will try my best </h2>
     <p>i forget this to do </p>
     <p> this boy is very smart </p>
+    <p> tarek is very naughty boy </p>
+    <p> tarek is a play boy</p>
     
 </body>
 </html>
